<resources>
    <string name="app_name">王清</string>
    <string name="action_settings">Settings</string>
    <string name="loading">数据加载中...</string>
    <string name="left_function_key">左功能键</string>
    <string name="right_function_key">右功能键</string>
    <string name="photograph">拍照</string>
    <string name="original_photo">原图拍照</string>
    <string name="finish">资料提交成功，请耐心等待审核；您可以先绑定银行卡，方便快捷提现</string>
    <string name="bound_bank_card">绑定银行卡</string>
    <string name="image_view_description">imageView</string>
    <string name="today_sign_success">签到成功</string>
    <string name="phone_password_wrong">账号或者密码错误，请重新输入</string>
    <string name="head_portrait">头&#160;&#160;像</string>
    <string name="view_data">差看资料</string>
    <string name="phone_number">手机号码</string>
    <string name="invitation_code">邀请码</string>
    <string name="invitation_code1">邀&#160;&#160;请&#160;&#160;码:</string>
    <string name="QRCode">二维码</string>
    <string name="personal">个人资料</string>
    <string name="custom_camera">自定义照相机</string>
    <string name="register">注册</string>
    <string name="camera">照相机</string>
    <string name="main">主页</string>
    <string name="qr_code">我的二维码</string>
    <string name="phone_number_regular">^((13[0-9])|(15[0-9])|(17[0-9])|(18[0-9]))\\d{8}$</string>
    <string name="document_information">证件信息</string>
    <string name="contacts">联系人</string>
    <string name="personal_information">个人信息</string>
    <string name="name">姓名</string>
    <string name="id_number">身份证号码</string>
    <string name="university_name">大学名称</string>
    <string name="education">学历</string>
    <string name="school_time">在校时间</string>
    <string name="learning_network">学信网</string>
    <string name="relative_information">亲属信息</string>
    <string name="relationship">关系</string>
    <string name="phone_no">手机号码:</string>
    <string name="emergency_contact_information">紧急联系人信息</string>
    <string name="please_enter_your_mobile_phone_number">请输入手机号码</string>
    <string name="please_enter_a_password">请输入密码</string>
    <string name="login_password">登录密码:</string>
    <string name="forget_password">忘记密码?</string>
    <string name="login">登录</string>
    <string name="please_input_the_invitation_code">请输入邀请码（非必填）</string>
    <string name="please_enter_the_verification_code_you_received">请输入您收到的验证码</string>
    <string name="click_to_get_verification_code">点击获取验证码</string>
    <string name="next_set_the_password">下一步，设置密码</string>
    <string name="transaction_password">交易密码</string>
    <string name="please_enter_transaction_password">请输入交易密码</string>
    <string name="determine">确定</string>
    <string name="complete_registration">完成注册</string>
    <string name="please_enter_the_login_password">请输入登录密码</string>
    <string name="network_information">我的网点</string>
    <string name="commodity_price">商品价格</string>
    <string name="my_network">我的网点</string>
    <string name="yesterday">昨天</string>
    <string name="today">今天</string>
    <string name="tomorrow">明天</string>
    <string name="please_check_the_network">请检查网络</string>
    <string name="failed_to_get_data">获取数据失败</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
