<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_background_color"
    android:orientation="vertical">

    <ImageView
        android:layout_marginTop="20dp"
       style="@style/style_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginLeft="16dp"
            android:src="@mipmap/ic_login_password"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/login_password"/>

        <EditText
            android:id="@+id/loginPasswordEditText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:textSize="14sp"
            android:textColorHint="@color/gray"
            android:hint="@string/please_enter_the_login_password"
            />

        <CheckBox
            android:id="@+id/loginCheckBox"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:button="@null"
            android:layout_marginRight="16dp"
            android:background="@mipmap/ic_password_eye_normal"/>


    </LinearLayout>

    <ImageView
       style="@style/style_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginLeft="16dp"
            android:src="@mipmap/ic_login_password"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/transaction_password"/>

        <EditText
            android:id="@+id/transactionPasswordEditText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:textSize="14sp"
            android:textColorHint="@color/gray"
            android:hint="@string/please_enter_transaction_password"
            />

        <CheckBox
            android:id="@+id/transactionPasswordCheckBox"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:button="@null"
            android:layout_marginRight="16dp"
            android:background="@mipmap/ic_password_eye_normal"/>


    </LinearLayout>

    <ImageView
        style="@style/style_line" />


    <Button
        android:id="@+id/completeRegistrationButton"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/complete_registration"
        android:background="@drawable/button_background"/>

</LinearLayout>
