<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_background_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <include
        android:id="@+id/loginToolbar"
        layout="@layout/global_include_toolbar" />

    <View
        style="@style/style_line"
        android:layout_marginTop="20dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:background="@mipmap/ic_register_phone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/phone_no" />

        <EditText
            android:id="@+id/phontEditText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:textColorHint="@color/gray"
            android:hint="@string/please_enter_your_mobile_phone_number"
            android:maxLength="11"
            android:phoneNumber="true"
            android:singleLine="true"
            android:textSize="14sp" />


    </LinearLayout>

    <View style="@style/style_line" />

    <View
        style="@style/style_line"
        android:layout_marginTop="10dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="16dp"
            android:background="@mipmap/ic_login_password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/login_password" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:longClickable="false"
            android:textColorHint="@color/gray"
            android:hint="@string/please_enter_a_password"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/passedwordChecked"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/eye_radio_button"
            android:button="@null" />

    </LinearLayout>


    <View style="@style/style_line" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginRight="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/forget_password"
        android:textColor="@color/loading_color_3" />

        <TextView
            android:id="@+id/locationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="16dp"
            android:layout_marginTop="30dp"
            android:text="@string/forget_password"
            android:textColor="@color/loading_color_3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/registerButton"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_regist"
            android:text="@string/register"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/login"
            android:textColor="@color/white" />


    </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/black"/>

        <com.example.administrator.fragmenttext.addresspick.PlacePickerUI
            android:layout_below="@+id/info"
            android:id="@+id/place_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>



</RelativeLayout>
