<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical">


    <View
        android:layout_marginTop="10dp"
        style="@style/style_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        >


        <TextView
            android:paddingLeft="16dp"
            android:layout_width="120dp"
            android:gravity="center_vertical"
            android:layout_height="match_parent"
            android:text="@string/relative_information"/>


    </LinearLayout>

    <View style="@style/style_line" />

    <LinearLayout style="@style/personal_information_style">


        <TextView
            android:paddingLeft="16dp"
            android:layout_width="120dp"
            android:gravity="center_vertical"
            android:layout_height="match_parent"
            android:text="@string/name"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="小明"/>

    </LinearLayout>

    <View style="@style/style_line" />


    <LinearLayout style="@style/personal_information_style">


        <TextView
            android:paddingLeft="16dp"
            android:layout_width="120dp"
            android:gravity="center_vertical"
            android:layout_height="match_parent"
            android:text="@string/relationship"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="父子"/>

    </LinearLayout>

    <View style="@style/style_line" />

    <LinearLayout style="@style/personal_information_style">


        <TextView
            android:paddingLeft="16dp"
            android:layout_width="120dp"
            android:gravity="center_vertical"
            android:layout_height="match_parent"
            android:text="@string/phone_no"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="15158825765"/>

    </LinearLayout>

    <View style="@style/style_line" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        >


        <TextView
            android:paddingLeft="16dp"
            android:layout_width="120dp"
            android:gravity="center_vertical"
            android:layout_height="match_parent"
            android:text="@string/emergency_contact_information"/>


    </LinearLayout>

    <View style="@style/style_line" />

    <LinearLayout style="@style/personal_information_style">


        <TextView
            android:paddingLeft="16dp"
            android:layout_width="120dp"
            android:gravity="center_vertical"
            android:layout_height="match_parent"
            android:text="@string/name"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="小明"/>

    </LinearLayout>

    <View style="@style/style_line" />


    <LinearLayout style="@style/personal_information_style">


        <TextView
            android:paddingLeft="16dp"
            android:layout_width="120dp"
            android:gravity="center_vertical"
            android:layout_height="match_parent"
            android:text="@string/relationship"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="父子"/>

    </LinearLayout>

    <View style="@style/style_line" />

    <LinearLayout style="@style/personal_information_style">


        <TextView
            android:paddingLeft="16dp"
            android:layout_width="120dp"
            android:gravity="center_vertical"
            android:layout_height="match_parent"
            android:text="@string/phone_no"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="15158825765"/>

    </LinearLayout>

    <View style="@style/style_line" />


</LinearLayout>
